      to-be-purged removed packages.
    - Action preview prompt: warn (by default) when removing important
      packages (the ones marked as 'Important: yes').
    - Action preview prompt: fixed showing broken installed packages as to
      be reinstalled if an user prevented their automatic
      removal/reinstallation.
    - 'shell':
      - Don't rebuild the cache when the last action required less cache
        parts than the current one, but all needed parts were loaded before.
      - Don't rebuild the cache if simulation is on.
      - Replaced argument parsing algorithm from a shell invocation to a
        simple word parser (simple one-level shell quotes still allowed).
      - 'version' and 'help' commands now work also here.
    - 'dist-upgrade':
      - Do not apply positional arguments on the first stage (when upgrading
        package management tools).
    - 'reinstall':
      - Make non-must reinstall requests non-fatal even if there are no
        reinstallation candidates.
      - Also consider candidates having same version but different hash sums.
    - 'functional selectors':
      - New functions 'build-depends-arch' and 'build-conflicts-arch'.
      - New functions 'reverse-build-depends-arch' and
        'reverse-build-conflicts-arch.
      - New function 'important';
  * lib:
    - config:
      - New option 'cupt::console::warnings::removal-of-essential'.
      - New option 'cupt::console::warnings::removal-of-important'.
      - Don't ask dpkg for architectures if the 'apt::architecture' option
        was already set via configuration file.
      - New method 'getConfigurationPartPaths'.
      - Enable colored output on terminals by default.
      - New options in 'cupt::console::actions-preview' family:
        'package-indicators::manually-installed' and
        'package-indicators::automatically-installed'.
    - cache:
      - Verifying repository signatures: use APT keyrings directly, now that