@@ -1,4 +1,4 @@
-use Test::More tests => 7 + 5 + 5 + 5 + 5;
+use Test::More tests => 7 + 5 + 5 + 5 + 5 + 3;
 
 my $cupt = setup(
 	'dpkg_status' => [
@@ -15,11 +15,23 @@ my $cupt = setup(
 
 my $nv = get_empty_version();
 
+my $expect_warning;
 sub test {
 	my ($args, $expected_changes) = @_;
 	my $offer = get_first_offer("$cupt $args");
-	is_deeply(get_offered_versions($offer), $expected_changes, $args);
+	subtest $args => sub {
+		is_deeply(get_offered_versions($offer), $expected_changes, $args);
+		if ($expect_warning) {
+			like($offer, qr/^\QW: Package suffixes '+' and '-' are deprecated. Please use '--install' and '--remove', respectively.\E/m, 'deprecation warning');
+			my $warn_count = () = ($offer =~ m/W/g);
+			is($warn_count, 1, 'no more than 1 warning per whole invocation');
+		} else {
+			unlike($offer, qr/W/, 'no warning');
+		}
+	};
 }
+
+$expect_warning = 0;
 
 test('install oo++' => {'oo++' => 4});
 test('install pp--' => {'pp--' => 5});
@@ -28,6 +40,8 @@ test('remove nn--' => {'nn--' => $nv});
 test('install bb --remove nn--' => {'bb' => 3, 'nn--' => $nv});
 test('install pp-- --remove mm++' => {'pp--' => 5, 'mm++' => $nv});
 test('remove pp-- --install mm++' => {});
+
+$expect_warning = 1;
 
 test('install bb aa-' => {'aa' => $nv, 'bb' => 3});
 test('install pp-- aa- bb' => {'aa' => $nv, 'bb' => 3, 'pp--' => 5});
@@ -52,4 +66,9 @@ test('remove bb-' => {});
 test('remove mm++-' => {'mm++' => $nv});
 test('remove nn---' => {'nn--' => $nv});
 test('remove pp---' => {});
+
+# multiple suffixes in the same command
+test('remove aa+ bb+' => {'bb' => 3});
+test('install aa- bb- mm++-' => {'aa' => $nv, 'mm++' => $nv});
+test('install aa- nn--- --remove bb+ oo+++' => {'aa' => $nv, 'nn--' => $nv, 'bb' => 3, 'oo++' => 4});
 
